--- a/t/servroot/conf/nginx.conf
+++ b/t/servroot/conf/nginx.conf
@@ -41,22 +41,45 @@ http {
     location = /a {
         content_by_lua '
             local http = require "resty.httpipe"
-            local httpc = http:new()
-            httpc:set_timeout(5000)
-            local ok, err = httpc:request("127.0.0.1", ngx.var.server_port, {
-                method = "HEAD",
+
+            local from = http:new()
+            from:set_timeout(5000)
+            local ok, err = from:request("127.0.0.1", ngx.var.server_port, {
+                method = "GET",
                 path = "/b"
             })
 
-            local res, err = httpc:receive()
-            ngx.status = res.status
-            if res.body then
-                ngx.print(res.body)
-            end
+            local to = http:new()
+            to:set_timeout(5000)
+            local headers = {
+                ["Content-Length"] = 100
+            }
+            local ok, err = to:request("127.0.0.1", ngx.var.server_port, {
+                method = "POST",
+                path = "/b",
+                headers = headers,
+            })
+
+            local res1, err = from:receive{
+                body_filter = function(chunk)
+                    to:write(chunk)
+                end
+            }
+
+            local res2, err = to:receive()
+
+            ngx.status = res2.status
+            ngx.say(#res2.body)
         ';
     }
     location = /b {
-        echo "OK";
+        content_by_lua '
+            local t = {}
+            for i=1, 32768 do
+                t[i] = 0
+            end
+            ngx.print(table.concat(t))
+        ';
     }
 
         # End test case config.
